[package]
name = "libnbc"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

authors = ["secext2022 <secext2022@outlook.com>"]
repository = "https://github.com/fm-elpac/nbc"
description = "main library of nb_lang compiler (nbc)"
keywords = ["nb_lang", "nbc"]
categories = ["compilers", "parser-implementations"]

[dependencies]
log = "^0.4.20"
serde = { version = "^1.0.188", features = ["derive"] }
serde_json = "^1.0.105"
tokio = { version = "^1.32.0", features = ["full"] }

[features]
default = []
